Backend - Added authentication handling for project management